2009-06-04  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Revert Thomas' fix for NB#114352, since there should be already 1024
	byte limit (better fix that if it's broken), needs more investigation.

2009-06-03  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-client.[ch]: add new function
	mb_wm_client_get_next_focused_app() to return the app next above
	a given client in the focus order.

	* matchbox/theme-engines/mb-wm-theme-png.c: avoid warning about
	unused result of fread().

	Fixes: NB#114352 Unwanted line is displayed in contact starter view

	* matchbox/core/mb-wm-client-window.c: Truncate window titles
	longer than 512 bytes.  If the title is XML, fall back to treating
	it as non-XML, or it won't show.

2009-06-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.[ch]
	(mb_wm_comp_mgr_clutter_set_client_redirection): New function to
	toggle redirection for the compositor's client object.
	(mb_wm_comp_mgr_clutter_client_track_damage): Set the texture window
	to zero when toggling damage tracking off.
	* matchbox/core/mb-window-manager.c (mb_wm_unredirect_client): Update
	Clutter's idea about redirection before changing it in the X side.
	(mb_wm_setup_redirection): Update Clutter's idea about redirection.

2009-06-01  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_handle_damage): Don't handle damage in
	non-composited mode.
	(mb_wm_comp_mgr_clutter_client_track_damage): New function to toggle
	damage event subscription on/off.
	(mb_wm_comp_mgr_clutter_map_notify_real): Call
	mb_wm_comp_mgr_clutter_client_track_damage to setup damage tracking.
	Tries to handle the case when damage tracking is re-enabled after a
	pause in the tracking.
	(mb_wm_comp_mgr_clutter_client_destroy): Call
	mb_wm_comp_mgr_clutter_client_track_damage to tear down damage
	tracking.