@@ -4,6 +4,9 @@ matchbox-window-manager-2 (0.2.42-1~unreleased) unstable; urgency=low
   * Fixes to non-compositing mode support.
   * Update libclutter-dev build dependency because of new API there.
 
+  Laszlo:
+  * Fixes: NB#117853 - Unreproducible crash -mb_wm_decor_button_destroy ()
+
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon,  1 Jun 2009 08:29:17 +0300
 
 matchbox-window-manager-2 (0.2.41-1) unstable; urgency=low
